# RAG-based-App-Using-Langchain-And-Huggingface-And-Mistra

./: app.py  pyproject.toml  rag.ipynb
